tests/sksl/errors/ReturnFromVoid.glsl
### Compilation failed:

error: 1: may not return a value from a void function
error: 2: may not return a value from a void function
error: 3: may not return a value from a void function
3 errors
